# wit-for-process-apis-experiments

./: README.md
ft_composed/: .gitignore
ft_composed/file_transfer_api/src/: lib.rs
ft_composed/ft_composed/: Cargo.toml  file_transfer.rs
ft_composed/ft_composed/wit/: file_transfer.wit  file_transfer_api.wit
ft_composed_2/: Cargo.toml
ft_composed_2/download/src/: lib.rs
ft_composed_2/file_transfer_api/: Cargo.toml  api.wasm
ft_composed_2/ft_composed/: ft_composed.wasm
ft_composed_2/ft_composed/src/: lib.rs
ft_composed_2/ft_composed/wit_less_old/: file_transfer.wit
ft_func_composed/file_transfer_func_api/: Cargo.toml  api.wasm
ft_func_composed/ft_func_composed/: ft_composed_no_embed.wasm
ft_func_composed/ft_func_composed/src/: lib.rs
ft_func_composed/list_files/src/: lib.rs
ft_func_composed/pkg/: scripts.json
ft_func_composed/worker/src/: lib.rs
ft_func_composed_dont_use_func/: metadata.json
ft_func_composed_dont_use_func/file_transfer_func_api/wit_attempt0/: file_transfer_api.wit
ft_func_composed_dont_use_func/ft_func_composed/: Cargo.toml  ft_func_composed_no_api.wasm
ft_func_composed_dont_use_func/ft_func_composed/src/: lib.rs
ft_func_composed_dont_use_func/ft_func_composed/wit_old/: file_transfer.wit
ft_func_composed_dont_use_func/pkg/: metadata.json
ft_func_composed_no_api_world/: Cargo.toml
ft_func_composed_no_api_world/file_transfer_func_api/: file_transfer_api.wasm
ft_func_composed_no_api_world/ft_func_composed/: ft_func_composed.wasm
ft_func_composed_no_api_world/pkg/: manifest.json
(+2 files in other folders)
